@@ -43,6 +43,7 @@
 #define COLOURBLIND_SIM_DEFAULT        0     /**< Whether to enable colourblindness simulation. */
 #define COLOURBLIND_TYPE_DEFAULT       0     /**< Type of colourblindness to simulate. */
 #define COLOURBLIND_CORRECT_DEFAULT    0.    /**< Intensity of the colourblindness correction. */
+#define GAME_SPEED_DEFAULT             1.    /**< Game speed. */
 #define HEALTHBARS_DEFAULT             1     /**< Whether or not to show pilot health bars. */
 #define BG_BRIGHTNESS_DEFAULT          0.5   /**< How much to darken (or lighten) the backgrounds. */
 #define NEBU_NONUNIFORMITY_DEFAULT     1.    /**< How much to darken (or lighten) the nebula stuff. */
@@ -98,6 +99,7 @@ typedef struct PlayerConf_s {
    int colourblind_sim; /**< Whether to enable colourblindness simulation. */
    int colourblind_type; /**< Type of colourblindness. */
    double colourblind_correct; /**< Whether to enable colourblindness simulation. */
+   double game_speed; /**< Speed of the game. */
    int healthbars; /**< Whether or not to show health bars next to pilots. */
    double bg_brightness; /**< How much to darken the background stuff. */
    double nebu_nonuniformity; /**< How much to darken the nebula stuff. */
